CoreFitness.Presentation/wwwroot/css/site.css
/* ... */
/* Självaste checkmarken */
.checkmark::after {
    content: '\2713';
    position: absolute;
    display: none;
    color: black;
    font-size: 25px;
    left: 6px;
    top: -2px;
}
.checkbox-wrapper input:checked ~ .checkmark::after {
    display: block;
}
/*CHECKBOX END*/


/*BECOME MEMBER - SETPASSWORD*/
.placeholder-padding-wrapper {
    display: flex;
    flex-direction: column;
    width: 100%;
    font-weight: 700;
    font-size: 0.9rem;
    font-family: "Poppins", sans-serif;
    gap: 0.5rem;
    padding-top: 1rem;
    margin-top: 1rem;
}
.green-email {
    background-color: rgb(231, 252, 231);
    border-radius: 10px;
    padding: 1rem;
    margin-bottom: 0.5rem;
    margin-top: 0.5rem;
    font-weight: 600;
}

/*MYACCOUNT START*/
.account-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2rem;
}
@media (min-width: 768px) {
.account-container {
    flex-direction: row;
    align-items: stretch;
}
}

.account-title {
    display: flex;
    justify-content: center;
    margin-bottom: 2rem;
    margin-top: 2rem;
}
/*ACCOUNT - minicolumn*/
.mini-column {
    border-radius: 20px;
    background: white;
    margin-top: 3rem;
}
.account-menu {
    background-color: var(--lightgreen-color);
    border-radius: 20px 20px 0 0;
}
.account-mini-column-text, .account-menu {
    font-family: "Poppins", sans-serif;
    font-weight: 600;
    padding: 1rem;
    font-size: 1rem;
}
.account-mini-column-text:hover {
    color: var(--hovergreen-color);
    cursor: pointer;
}
.sign-out-btn {
    border: none;
    background: none;
    display: block;
    width: 100%;
}
.mini-column-hr {
    background-color: var(--light-gray-solid);
    width: 90%;
    margin-left: auto;
    margin-right: auto;
}
.account-mini-column-text {
    display: flex;
    justify-content: space-between;
    align-items: center;
    text-decoration: none;
    color: black;
}
.account-menu, .account-mini-column-text  {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
}
/*ACCOUNT - minicolumn END*/
.account-column-deleteaccount {
    display: flex;
    flex-direction: column;
    text-align: center;
    padding: 1rem;
}
.deleteaccount {
    font-family: "Poppins", sans-serif;
    font-weight: 400;
    font-size: 0.65rem;
}
.deleteaccount-red {
    font-family: "Poppins", sans-serif;
    color: var(--remove-account-red);
    font-weight: 600;
    font-size: 0.9rem;
    border: none;
    background: none;
    cursor: pointer;
    text-decoration: none;
}
    .deleteaccount-red:hover {
        color: var(--hovergreen-color);
    }
    
    
    /*MYACCOUNT - höger*/
    .account-myaccount-column-title {
        display: flex;
        justify-content: center;
        font-family: "Poppis", sans-serif;
        font-size: 3.2rem;
    }
@media (min-width: 768px) {
    .account-myaccount-column-title {
        justify-content: start;
    }
}
.accountform-hr {
      background-color: var(--light-gray-solid);
      margin-top: 3rem;
      margin-bottom: 1.3rem;
    }
.account-form, .statistic-form {
    display: flex;
    flex-direction: column;
    background: white;
    padding-bottom: 3rem;
    padding: 3rem 3rem 3rem 3rem;
    border: 2px solid white;
    border-radius: 20px;
}
.account-field {
    display: flex;
    flex-direction: column;   
}
.account-right {
    flex-grow: 1;
}
.account-btn {
    align-self: end;
    margin-top: 2rem;
    padding-left: 2rem;
}
/*MYACCOUNT END*/


/*FILUPPLADDNING*/
.browse-btn {
    background-color: var(--gray-browse-btn);
    color: #333;
    padding: 10px 25px;
    border-radius: 10px;
    font-weight: 600;
    font-family: "Poppins", sans-serif;
    pointer-events: none; /* Gör att klicket går igenom knappen */
}
/* Denna delen döljer den riktiga knappen browse, så att jag istället kan designa den som jag vill ha den */
#real-file-input {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0;
    cursor: pointer;
    z-index: 10;
}
/*FILUPPLADDNING END*/


/*MY STATISTIC*/
.statistic-title {
    display: flex;
    justify-content: center;
    font-family: "Poppis", sans-serif;
    font-size: 3rem;
    font-weight: 500;
    padding-bottom: 1rem;
}
@media (min-width: 768px) {
    .statistic-title {
        justify-content: start;
    }
}
.statistic-container {
    padding-top: 5rem;
    padding-bottom: 5rem;
}
.statistic-form {
    gap: 1rem;
}
.statistic-spacebetween {
    display: flex;
    justify-content: space-between;
    font-family: "Poppins", sans-serif;
    font-size: 1.1rem;
    font-weight: 500;
    padding-top: 1rem;
}
.statistics-img {
    width: 100%;
}












/*DELETE ACCOUNT*/
.delete-btn, .go-back-btn {
    align-items: center;
    display: flex;
    justify-content: center;
    border-radius: 50px;
    color: black;
    padding: 1rem 1rem 1rem 1rem;
    font-family: "DM sans", sans-serif;
    font-size: 1rem;
    font-weight: 800;
    cursor: pointer;
    outline: none;
    text-decoration: none;
    gap: 0.5rem;
    width: 300px;
}

.delete-container {
    display: flex;
    justify-content: center;
    gap: 1rem;
}

.go-back-btn:hover {
    background-color: var(--hovergreen-color);
    border: 2px solid var(--hovergreen-color);
}
.delete-btn:hover {
    background-color: red;
    border: 2px solid red;
}

.go-back-btn, .delete-btn {
    background-color: var(--lightgreen-color);
    border: 2px solid var(--lightgreen-color);
}

.go-back-btn {
    padding-left: 2rem;
    padding-right: 2rem;
}

/*DELETE ACCOUNT END*/

